--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
-    
+    <!-- Header -->
+  <header>Header</header>  
+
+    <!--Main-->
+  <main>main Content</main>
+
+  <!--Footer-->
+  <footer>Footer</footer>
 </body>
 </html>
