Add logo to header and apply Oswald font

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
     <!--stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-
+    <a href="index.html">
+        <h1 id="logo">Love Running</h1>
   <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+       
+    </header>
 
     <!--Main-->
     <main>main Content</main>
