--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </header>
 
     <!--Main-->
-    <main>main Content</main>
+    <main><section id="hero"></section>
+    </main>
 
     <!--Footer-->
     <footer>
